Fixed text wrapping

--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,4 +1,4 @@
 .Intro {
-    white-space: pre;
+    white-space: pre-wrap;
     text-align: center;
 }
